Updated wording on candidate summary

--- a/Pages/userpage.html
+++ b/Pages/userpage.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
             </div>
-           
+
             <div class="card col-6" id="skills" style="width: 18rem;">
                 <!-- This is the Skills section of the candidate -->
                 <div class="exper">
@@ -71,18 +71,13 @@
                 <div class="cand-exp">
                     <!-- This is the Candidate's experience summary section of the candidate -->
                     <h6 class="text-center">Candidate Experience Summary:</h6>
-                    
+
                     <p>Quick learner, analytical, detail-oriented, and self-motivated Software Engineer with hands-on
                         experience in HTML, CSS, and JavaScript focused in MERN stack (MongoDB, Express, React, and
                         Node).
-                        Possesses practical and technical knowledge of
-                        while continuously updating technical skills through collegiate courses and technical training.</p>
-                    </p>
+                        Brings a solid understanding of IT skills and actively enhances technical proficiency through
+                        ongoing education and training.</p>
                 </div>
-
-
-
-
             </div>
         </div>
 </body>
